# nlp_made

./: .gitignore  pyproject.toml  reqs  setup.cfg
src/: README.md  baseline.ipynb  bertmodel.ipynb  utils.py
src/data_utils/: dataset.py  lang.py
src/models/: baseline.py
src/pl_utils/: pl_dataset.py  pl_model.py
