[tool.poetry]
name = "ml-mipt"
version = "1.0.0"
description = "Machine learning course at MIPT"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>, Radoslav Neychev <neychev@phystech.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
torch = { version = "2.0.1", source="torch"}
torchvision = { version = "0.15.2", source="torch"}
nltk = "^3.8.1"
gensim = "^4.3.1"
spacy = "^3.5.2"
torchtext = "^0.15.2"
jupyterlab = "^3.6.3"
subword-nmt = "^0.3.8"
pytorch-lightning = "^2.0.2"
tensorboard = "^2.13.0"
jupyter = "^1.0.0"
sympy = "^1.12"
torch-tb-profiler = "^0.4.1"
transformers = "^4.29.2"
datasets = "^2.12.0"
sacrebleu = "^2.3.1"
accelerate = "^0.19.0"
evaluate = "^0.4.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true


[tool.poetry.extras]
basic = ["Pillow", "tqdm", "scikit-image", "h5py", "pydotplus", "eli5", "PDPbox", "shap"]
nlp = ["nltk", "gensim", "spacy", "subword-nmt", "pytorch-transformers", "torchtext", "bokeh"]
rl = ["gym", "graphviz"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
ipykernel = "^5.4.3"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"